--- a/app/index.css
+++ b/app/index.css
@@ -148,7 +148,6 @@ li {
 .column {
   display: flex;
   flex-direction: column;
-  border: 1px solid red;
 }
 
 .row {
@@ -209,4 +208,8 @@ button {
 .dark-btn:disabled {
   background: #f2f2f2;
   color: #c7c7c7;
+}
+
+.players-container {
+  margin: 100px 0;
 }
